# AI_course

hw1/: Part 1. Basic tools.ipynb  Part 2_2. Linear regression.ipynb
hw3/: part1a_pretrained_classification.ipynb  part1b_pretrained_descriptor.ipynb  part2a_train_classification.ipynb  part2b_train_descriptor.ipynb
hw4/: Part 1. Datacenter Anomaly Detection.ipynb  Part 2. Unsupervised Feature Learning.ipynb  task3.txt
hw5/: intro_to_nlp_hw_unsolved.ipynb  sur  sur2
hw8/: AI_HW8.ipynb
hw9/: CMakeLists.txt  package.xml
hw9/launch/: chat.launch
hw9/src/: dist.cpp
